--- a/pom.xml
+++ b/pom.xml
@@ -19,8 +19,8 @@
         <junit.version>5.9.1</junit.version>
         <mockito.version>4.4.0</mockito.version>
         <bouncycastle.version>1.76</bouncycastle.version>
-        <gestoreanagrafiche.version>0.0.5-SNAPSHOT</gestoreanagrafiche.version>
-        <libreriaregole.version>0.0.5-SNAPSHOT</libreriaregole.version>
+        <gestoreanagrafiche.version>0.0.6-SNAPSHOT</gestoreanagrafiche.version>
+        <libreriaregole.version>0.0.9-SNAPSHOT</libreriaregole.version>
         <apigateway.version>0.0.5-SNAPSHOT</apigateway.version>
         <gestoreesiti.version>0.0.5-SNAPSHOT</gestoreesiti.version>
         <connettoremds.version>0.0.5-SNAPSHOT</connettoremds.version>
@@ -150,7 +150,7 @@
         <dependency>
             <groupId>org.yaml</groupId>
             <artifactId>snakeyaml</artifactId>
-            <version>1.33</version>
+            <version>2.0</version>
         </dependency>
         
         <dependency>
@@ -158,7 +158,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.15.3</version>
         </dependency>
-        
+		<dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.15.3</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-text</artifactId>
